--- a/UdemyFormationWeb/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/UdemyFormationWeb/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using UdemyFormationWeb.Areas.Identity
 @using UdemyFormationWeb.Areas.Identity.Pages
+@using UdemyFormation.Utility;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
