--- a/UdemyFormationWeb/Areas/Customer/Views/Home/Details.cshtml
+++ b/UdemyFormationWeb/Areas/Customer/Views/Home/Details.cshtml
@@ -1,12 +1,12 @@
-﻿@model Product
+﻿@model ProductDetailsVM
 
 <form method="post">
-    <input hidden asp-for="@Model.Id" />
+    <input hidden asp-for="@Model.Product.Id" />
     <div class="card shadow border-0 mt-4 mb-4">
         <div class="card-header bg-secondary bg-gradient text-light py-4">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h3 class="text-white text-uppercase">@Model.Title</h3>
+                    <h3 class="text-white text-uppercase">@Model.Product.Title</h3>
                 </div>
             </div>
         </div>
@@ -22,22 +22,22 @@
                 <div class="row">
                     <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
 
-                        @if (Model.ImagePath != null)
+                        @if (Model.Product.ImagePath != null)
                         {
-                            <img src="@Model.ImagePath" class="d-block w-100" alt="...">
+                            <img src="@Model.Product.ImagePath" class="d-block w-100" alt="...">
                         }
 
                     </div>
                     <div class="col-12 col-lg-6 offset-lg-1">
 
                         <div class="col-12 col-md-6 pb-4">
-                            <span class="badge">@Model.Category.Name</span>
+                            <span class="badge">@Model.Product.Category.Name</span>
                         </div>
                         <div class="row ps-2">
                             <h6 class="text-dark text-opacity-50  pb-2">
                                 Price:
                                 <span class="text-decoration-line-through">
-                                    @Model.Price.ToString("c")
+                                    @Model.Product.Price.ToString("c")
                                 </span>
                             </h6>
                         </div>
@@ -60,28 +60,27 @@
                                 <div>Price</div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
-                                <div>@Model.Price.ToString("c")</div>
+                                <div>@Model.Product.Price.ToString("c")</div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
-                                <div>@Model.Price10.ToString("c")</div>
+                                <div>@Model.Product.Price10.ToString("c")</div>
                             </div>
                         </div>
                         <div class="row pl-2 my-3">
-                            <p class="text-secondary lh-sm">@Html.Raw(Model.Description)</p>
+                            <p class="text-secondary lh-sm">@Html.Raw(Model.Product.Description)</p>
                         </div>
-                        @*                        <div class="row pl-2 mb-3">
-                        <div class="col-md-4">
-                        <div class="input-group mb-3">
-                        <span class="input-group-text bg-primary text-white border-0 fw-semibold"
-                        id="inputGroup-sizing-default">
-                        Count
-                        </span>
-                        <input asp-for="Count" type="number" value="1" class="form-control text-end"
-                        aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" />
-
+                        <div class="row pl-2 mb-3">
+                            <div class="col-md-4">
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text bg-primary text-white border-0 fw-semibold"
+                                          id="inputGroup-sizing-default">
+                                        Count
+                                    </span>
+                                    <input asp-for="Count" type="number" value="1" class="form-control text-end"
+                                           aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" />
+                                </div>
+                            </div>
                         </div>
-                        </div>
-                        </div> *@
                         <div class="row">
                             <div class="col-12 col-md-6 pb-1">
                                 <button type="submit"
